--- a/algorithm-description/alg.tex
+++ b/algorithm-description/alg.tex
@@ -95,17 +95,15 @@
             %This isn't the best method. Since we're much of our image is the same, the matrix is singular (or at least close to it). We need to find another method to both approximate the transform and figure out which indices are important.
             
         \subsection{Approximating the wavelet transform}
-            %We can easily get $m$ using \texttt{dwt2\_full}. It's then the same problem as in one dimension: solve a linear system. Since you only care about the coarse wavelet coefficients, delete the rows $m$ that give you those. Also delete the columns that you don't sample at.
-            I think this is the same as in 1D: we have to delete the appropriate rows and columns.Since we have $w = c x r$, and we only care about $m$ terms of $w$, we can delete the last $n-m$ rows of $c$ and the last $n-m$ columns of $r$.
+            We want to approximate the wavelet transform in two dimensions. How should we do that? Some ideas I went through were
+                setting the non-sampled indices to 0 and
+                deleting the proper (what's proper?) rows and columns in $x$, $c$ and $r$.
 
-            Just making sure the sizes check out:
-            $$ w^{m\times m} = c^{m\times n} x^{n \times n} r^{n \times m} $$
-            $$ w^{m\times m} = temp^{m \times n} r^{n \times m} $$
-            $$ w^{m\times m} = temp^{m \times m}$$
+            Neither of those give you the right output. What you have to do is think of it at a more basic level. We're trying to approximate the 2D Haar wavelet transform. What if we just approximated the wavelet transforms of the rows then approximated the wavelet transform on \{just the resulting $m\times m$ matrix, all the elements\}?
 
+            Since we are \textit{approximating} terms, that means that the last half of all of these signals are 0. So it doesn't matter whether we use all the indices or just the resulting $m \times m$ matrix -- they'll give the same result.
 
-            That was assuming that $x$ was fully sampled. Since we're undersampling, we'll have to delete those entries of $x$, columns of $c$ and rows of $r$.
-
+            The end goal: approximate wavelet transforms of the rows and columns. I'm guessing that we will approximate the columns then approximate the wavelet transform of that matrices rows.
 
         \subsection{Which indices are important?}
             Initially, I thought that the wavelet transform had to be recursive. That makes it really tricky for the indices -- you would have to make \texttt{dwt\_ind} functions, and keep doing it. 
